# Izovak

./: .gitignore  CMakeLists.txt  README.md  data_first_part.txt  data_second_part.txt  test.cpp
Extrapolator/: CMakeLists.txt  FitCurve.cpp  FitCurve.h  ext.cpp
